--- a/DesafioConcrete/DesafioConcrete.API/DesafioConcrete.API.csproj
+++ b/DesafioConcrete/DesafioConcrete.API/DesafioConcrete.API.csproj
@@ -208,11 +208,18 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
+    <Compile Include="Enums\StatusCodeEnum.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\RetornoMensagem.cs" />
+    <Compile Include="Models\RetornoSingUpViewModel.cs" />
+    <Compile Include="Models\RetornoUsuarioViewModel.cs" />
+    <Compile Include="Models\TelefoneViewModel.cs" />
+    <Compile Include="Models\UsuarioViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
+    <Compile Include="Utils\Utilitarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Swagger.XML" />
@@ -306,9 +313,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
