--- a/DesafioConcrete/DesafioConcrete.API/DesafioConcrete.API.csproj
+++ b/DesafioConcrete/DesafioConcrete.API/DesafioConcrete.API.csproj
@@ -212,8 +212,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\RetornoMensagem.cs" />
-    <Compile Include="Models\RetornoSingUpViewModel.cs" />
+    <Compile Include="Models\RetornoViewModel.cs" />
     <Compile Include="Models\RetornoUsuarioViewModel.cs" />
     <Compile Include="Models\TelefoneViewModel.cs" />
     <Compile Include="Models\UsuarioViewModel.cs" />
