--- a/DesafioConcrete/DesafioConcrete.API/Web.config
+++ b/DesafioConcrete/DesafioConcrete.API/Web.config
@@ -24,10 +24,11 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
-  <system.webServer>
-    
+  <system.webServer>    
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+      <remove name="FormsAuthentication"/>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
