--- a/DesafioConcrete/DesafioConcrete.API/packages.config
+++ b/DesafioConcrete/DesafioConcrete.API/packages.config
@@ -30,6 +30,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
@@ -43,6 +46,7 @@
   <package id="SimpleInjector.MVC3" version="4.3.0" targetFramework="net461" />
   <package id="Swagger-Net" version="8.3.18.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net461" />
   <package id="WebActivator" version="1.5.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
