Commit com a conexão pelo Ado.Net e tratamento para exebir mensagem de erro tratada ao não localizar o endpoint

--- a/DesafioConcrete/DesafioConcrete.Infra/DesafioConcrete.Infra.csproj
+++ b/DesafioConcrete/DesafioConcrete.Infra/DesafioConcrete.Infra.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ado.Net\ConexaoAdoNet.cs" />
     <Compile Include="Contextos\EFContexto.cs" />
     <Compile Include="Mapeamentos\TelefoneMap.cs" />
     <Compile Include="Mapeamentos\UsuarioMap.cs" />
